# dataform2looker

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LookML.py  README.md  generator.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: cicd.yml  pre-commit.yml  pytest.yml
dataform2looker/: LookML.py  __init__.py  __main__.py  database_mappers.py  dataform2looker.py  exceptions.py  lookml.py  main.py
dataform2looker/tests/: test_database_mappers.py
dataform2looker/vc/: github_handler.py
example/: covid19_assertions.sqlx  covid19_dependency_assertions.sqlx  covid19_functions.sqlx  synthetic_definition.sqlx
examples/: result.json
tests/: conftest.py  dataform_result.json  test_bigquerytable.py  test_column.py  test_generictable.py  test_lookml.py
