[tool.poetry]
name = "dataform2looker"
version = "0.1.0"
description = "A package to generate Looker view files automatically from dataform models."
authors = ["papikiu <khachatur.papikyan@devoteam.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
google-cloud = "^0.34.0"
bigquery = "^0.0.41"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    ".env",
]

indent-width = 4

[tool.ruff.lint]
select = ["E", "ANN", "I001", "N"]
ignore = ["D417", "ANN002", "ANN003", "ANN1"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
indent-style = "space"
