[tool]

[tool.poetry]
authors = ["Khachatur Papikyan <khachatur.papikyan@devoteam.com>",
           "Edgar Ochoa <edgar.ochoa@devoteam.com>",
           "Arturo Voltattorni <arturo.voltattorni@devoteam.com>",
           "Alexandros Kyrloglou <alexandros.kyrloglou@devoteam.com>"]
classifiers = [
  'Development Status :: 2 - Pre-Alpha',
  'Intended Audience :: Developers',
  'License :: OSI Approved :: MIT License',
  'Natural Language :: English',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
]
description = "A package to generate Looker view files automatically from dataform models."
license = "MIT"
name = "dataform2looker"
packages = [
  {include = "dataform2looker"},
]
readme = "README.md"
version = "0.0.1"

[tool.poetry.scripts]
d2l = "dataform2looker.dataform2looker:main"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
google-cloud = "^0.34.0"
bigquery = "^0.0.41"
lkml = "1.3.5"
google-cloud-bigquery = "3.25.0"

[tool.ruff.lint]
select = ["E", "ANN", "I001", "N"]
ignore = ["D417", "ANN002", "ANN003", "ANN1"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    ".env",
]
indent-width = 4

[tool.ruff.format]
indent-style = "space"
