[tool]

[tool.poetry]
authors = ["Devoteam <info@devoteam.com>"]
classifiers = [
  'Development Status :: 2 - Pre-Alpha',
  'Intended Audience :: Developers',
  'License :: OSI Approved :: MIT License',
  'Natural Language :: English',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
]
description = "A package to generate Looker view files automatically from dataform models."
license = "MIT"
name = "dataform2looker"
packages = [
  {include = "dataform2looker"},
]
readme = "README.md"
version = "0.0.1"

[tool.poetry.scripts]
df2l = "dataform2looker.dataform2looker:main"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[project.urls]
Homepage = "https://github.com/devoteamgcloud/dataform2looker/"

[tool.poetry.dependencies]
python = "^3.10"
lkml = "1.3.5"
google-cloud-bigquery = "3.25.0"

#[tool.poetry.extras] TODO: add when other databases are implemented
#bigquery = ["google-cloud-bigquery"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # flake8-annotations
    "ANN",
    # pep8-naming
    "N",
    # flake8-pie
    "PIE",
    # pydocstyle
    "D",
    # pydoclint
    "DOC",
    ]
ignore = ["ANN101"]
preview = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    ".env",
]
indent-width = 4

[tool.ruff.format]
indent-style = "space"
preview = true
